fix: fix text overflow on search results

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -325,6 +325,7 @@ ul.photon-autocomplete {
 }
 .umap-edit-enabled .photon-autocomplete li.on .search-result-tools {
     display: flex;
+    position: relative;
 }
 
 
